# analyst

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  reader.rs  utils.rs
src/analyzer/: column_statistics.rs  extrema.rs  frequent_patterns.rs  missing_values.rs  mod.rs  show.rs
tests/: integration_tests.rs  test_data.csv
